--- a/templates/festivus.html
+++ b/templates/festivus.html
@@ -25,7 +25,7 @@
                 <br>
                 <br>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-outline-warning" id="festivus-btn" onclick="myFunction()">{{ days_left }} DAYS LEFT</a>
+                    <a class="btn btn-lg btn-outline-warning" id="festivus-btn" onclick="myFunction()">{{ days_left }} DAYS LEFT</a>
                 </p>
             </main>
         </div>
@@ -34,14 +34,47 @@
 
 <script type="text/javascript">
 
-    function myFunction() {
-    document.getElementById("background-image-gif").style.backgroundImage = "url('https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif')";
-}
+//     function myFunction() {
+//     document.getElementById("background-image-gif").style.backgroundImage = "url(https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif)";
+// }
+
+// onclick="myFunction()"
+
+
+// function myFunction() {
+//     console.log("HEY 1")
+
+//     if (document.getElementById("background-image-gif").style.backgroundImage = "url(static/images/georgeparents.jpg)") {
+//         console.log("IF WORKED");
+//     }
+// };
+
+
+
+function myFunction() {
+    console.log("HEY 1", document.getElementById("background-image-gif").style.backgroundImage)
+
+    if (document.getElementById("background-image-gif").style.backgroundImage = "url(static/images/georgeparents.jpg)") {
+    console.log("HEY 2")
+    document.getElementById("background-image-gif").style.backgroundImage = "url(https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif)";
+
+    } else if (document.getElementById("background-image-gif").style.backgroundImage = "url(https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif)") {
+    console.log("HEY 3")
+    document.getElementById("#background-image-gif").style.backgroundImage = "url(static/images/georgeparents.jpg)";
+    }
+
+    console.log("HEY 4")
+
+};
+
+// const daysLeftBtn = document.querySelector('#festivus-btn');
+
+// daysLeftBtn.addEventListener('click', myFunction);
 
 </script>
 
 
-
+{% endblock %}
     <!-- const changeBackgroundGif = () => {
 
         if (document.getElementById('#background-image-gif').url === 'static/images/georgeparents.jpg') {
@@ -72,4 +105,3 @@ https://i.pinimg.com/originals/04/6c/e0/046ce0f1531fc6f80932bb7f5366ea57.gif
         <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
     </div>
     
-{% endblock %}
